library_includedir=$(includedir)/dptcpp-0.1/dptcpp
library_include_HEADERS = dptcpp/AsyncWrap.h dptcpp/ClassIdClass.h \
	dptcpp/ClassIdCounter.h dptcpp/Config.h dptcpp/Debug.h dptcpp/dptcpp.h \
	dptcpp/Exception.h dptcpp/IdentifiableClass.h dptcpp/Identifiable.h \
	dptcpp/Identity.h dptcpp/IdTypes.h dptcpp/InvalidPropertyException.h \
	dptcpp/ParseContext.h dptcpp/PropertyCollection.h dptcpp/PropertyCore-fwd.h\
	dptcpp/PropertyCore.h dptcpp/Property-fwd.h dptcpp/Property.h \
	dptcpp/PropertyParser.h dptcpp/PropertyReactor.h dptcpp/PropertyWeak-fwd.h \
	dptcpp/PropertyWeak.h dptcpp/SingleAcceptContext.h \
	dptcpp/TabledParseContext.h dptcpp/TerminalContext.h dptcpp/ValueConvert.h \
	 dptcpp/XmlParser.h dptcpp/XmlParserInner.h dptcpp/PropertySerializer.h \
	 dptcpp/PropertyInterface.h
